@@ -23,8 +23,6 @@ import static org.openqa.selenium.grid.data.Availability.UP;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.HttpMethod.DELETE;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.lang.reflect.Field;
 import java.net.URI;
 import java.net.URISyntaxException;
@@ -34,6 +32,7 @@ import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.ServiceLoader;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.logging.Logger;
@@ -213,9 +212,9 @@ public class OneShotNode extends Node {
     LOG.info(
         "Encoded response: "
             + JSON.toJson(
-                ImmutableMap.of(
+                Map.of(
                     "value",
-                    ImmutableMap.of(
+                    Map.of(
                         "sessionId", sessionId,
                         "capabilities", capabilities))));
 
@@ -225,9 +224,9 @@ public class OneShotNode extends Node {
         new CreateSessionResponse(
             getSession(sessionId),
             JSON.toJson(
-                    ImmutableMap.of(
+                    Map.of(
                         "value",
-                        ImmutableMap.of(
+                        Map.of(
                             "sessionId", sessionId,
                             "capabilities", capabilities)))
                 .getBytes(UTF_8)));
@@ -397,7 +396,7 @@ public class OneShotNode extends Node {
         getId(),
         getUri(),
         1,
-        ImmutableSet.of(
+        Set.of(
             new Slot(
                 new SlotId(getId(), slotId),
                 stereotype,
