@@ -19,9 +19,8 @@ package org.openqa.selenium.grid.web;
 
 import static java.net.HttpURLConnection.HTTP_INTERNAL_ERROR;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import com.google.common.net.MediaType;
+import java.util.Map;
 import java.util.Set;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.http.Contents;
@@ -36,9 +35,9 @@ public class CheckContentTypeHeader implements Filter {
           .setStatus(HTTP_INTERNAL_ERROR)
           .setContent(
               Contents.asJson(
-                  ImmutableMap.of(
+                  Map.of(
                       "value",
-                      ImmutableMap.of(
+                      Map.of(
                           "error", "unknown error",
                           "message", "Content-Type header is missing",
                           "stacktrace", ""))));
@@ -46,8 +45,7 @@ public class CheckContentTypeHeader implements Filter {
   private final Set<String> skipChecksOn;
 
   public CheckContentTypeHeader(Set<String> skipChecksOn) {
-    this.skipChecksOn =
-        ImmutableSet.copyOf(Require.nonNull("URLs where checks are skipped", skipChecksOn));
+    this.skipChecksOn = Set.copyOf(Require.nonNull("URLs where checks are skipped", skipChecksOn));
   }
 
   @Override
@@ -81,9 +79,9 @@ public class CheckContentTypeHeader implements Filter {
         .setStatus(HTTP_INTERNAL_ERROR)
         .setContent(
             Contents.asJson(
-                ImmutableMap.of(
+                Map.of(
                     "value",
-                    ImmutableMap.of(
+                    Map.of(
                         "error", "unknown error",
                         "message",
                             "Content-Type header does not indicate utf-8 encoded json: " + type,
