@@ -17,7 +17,6 @@
 
 package org.openqa.selenium.build;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -25,7 +24,7 @@ public class DevMode {
 
   // There is absolutely no way that this is going to be fragile. No way. Nada. Nope.
   private static final List<Supplier<Boolean>> DEV_MODE_CHECKS =
-      Arrays.asList(
+      List.of(
           // Check for IntelliJ
           () -> {
             if (System.getProperty("java.class.path", "").contains("idea_rt.jar")) {
