@@ -21,10 +21,11 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.openqa.selenium.grid.gridui.Urls.whereIs;
 import static org.openqa.selenium.json.Json.MAP_TYPE;
 import static org.openqa.selenium.remote.http.HttpMethod.GET;
-import static org.openqa.selenium.support.ui.ExpectedConditions.*;
+import static org.openqa.selenium.support.ui.ExpectedConditions.textToBe;
+import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfAllElementsLocatedBy;
+import static org.openqa.selenium.support.ui.ExpectedConditions.visibilityOfElementLocated;
 import static org.openqa.selenium.testing.Safely.safelyCall;
 
-import com.google.common.collect.ImmutableMap;
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
@@ -105,9 +106,9 @@ class OverallGridTest extends JupiterTestBase {
     Config config =
         new MemoizedConfig(
             new MapConfig(
-                ImmutableMap.of(
+                Map.of(
                     "server", Collections.singletonMap("port", port),
-                    "node", ImmutableMap.of("detect-drivers", true, "selenium-manager", true))));
+                    "node", Map.of("detect-drivers", true, "selenium-manager", true))));
 
     Server<?> server = new Standalone().asServer(config).start();
 
